# Advent_Code

./: .gitignore  Day12_code.py  Day13_code.py  Day15_code.py  Day1_code.ipynb  Day1_code.py  Day2_code.ipynb  Day2_code.py  Day3_code.py  Day5_code.py  Day6_code.py  Day7_code.py  Day9_code.py  pyproject.toml
2021/: Day10_code.py  Day10_outp.txt  Day11_code.py  Day14_code.py  Day1_code.py  Day3_code.py  Day4_code.py  Day8_code.py
2021/.ipynb_checkpoints/: Day1_code-checkpoint.ipynb  Day2_code-checkpoint.ipynb  Day3_code-checkpoint.ipynb
2022/: Day2_code.py  Day3_code.py  Day4_code.py  Day5_code.py  Day6_code.py  Day7_code.py
2023/: Day01.ipynb  Day02.ipynb  Day03.ipynb  Day04.ipynb  Day05.ipynb  Day06.ipynb  Day07.ipynb  Day09.ipynb  Day1.ipynb  Day10.ipynb  Day11.ipynb  Day12.ipynb  Day13.ipynb  Day14.ipynb  Day15.ipynb  Day16.ipynb  Day17.ipynb  Day18.ipynb  Day19.ipynb  Day1_code.py  Day2.ipynb  Day20.ipynb  Day21.ipynb  Day22.ipynb  Day8.ipynb
2024/: Day01.ipynb  Day02.ipynb  Day03.ipynb  Day04.ipynb  Day05.ipynb  Day06.ipynb  Day07.ipynb  Day08.ipynb  Day11.ipynb  Day13.ipynb  Day14.ipynb  Day15.ipynb  Day16.ipynb  Day17.ipynb  Day18.ipynb  Day19.ipynb  Day20.ipynb  Day21.ipynb  Day22.ipynb  Day23.ipynb  Day24.ipynb  Day25.ipynb
2025/: Day01.ipynb  Day02.ipynb  Day03.ipynb  Day04.ipynb  Day05.ipynb  Day06.ipynb  Day07.ipynb  Day08.ipynb  Day09.ipynb  Day10.ipynb  Day11.ipynb  Day12.ipynb
