[tool.poetry]
name = "adv-code"
version = "0.1.0"
description = ""
authors = ["morellil <leonardo.morelli@tno.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.0"
networkx = "^3.4.2"
tqdm = "^4.67.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
